--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1251,7 +1251,7 @@ document.getElementById('reportForm')?.addEventListener('submit', async (e)=>{
   </li>
   <!-- مراسلة الدعم (الأيقونة الصفراء) -->
   <li>
-    <a class="sheet__item" href="/messages/support">
+    <a class="sheet__item" href="/support/new">
       <span class="left">
         <span class="ic ic--support"></span>
         <span class="label">مراسلة الدعم</span>
